--- a/fodmap-app/src/styles/backgroundCustomColor.css
+++ b/fodmap-app/src/styles/backgroundCustomColor.css
@@ -44,3 +44,16 @@ input[type="text"]:valid {
 #boton:focus-within + .botonFiltro {
   display: block;
 }
+
+.botonFiltro {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.botonFiltro.show {
+  display: block;
+}
